SERVER-70679 Allow compact to run against time-series collections