src/mongo/db/commands/compact.cpp
@@ -96,7 +96,9 @@ public:
                 !replCoord->getMemberState().primary() || cmdObj["force"].trueValue());
 
         // Items in system.* cannot be moved as there might be pointers to them.
-        uassert(ErrorCodes::InvalidNamespace, "can't compact a system namespace", !nss.isSystem());
+        uassert(ErrorCodes::InvalidNamespace,
+                "can't compact a system namespace",
+                !nss.isSystem() || nss.isTimeseriesBucketsCollection());
 
         // This command is internal to the storage engine and should not block oplog application.
         ShouldNotConflictWithSecondaryBatchApplicationBlock noPBWMBlock(opCtx->lockState());
